<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jgwhit14.androidproject1.baseConverter">


    <EditText
        android:id="@+id/numberToConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterNumber"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/inputBase"
        android:hint="@string/inputBase"
        android:textAlignment="center"
        android:layout_below="@+id/numberToConvert"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/answer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/outputBase"
        android:hint="@string/outputBase"
        android:textAlignment="center"
        android:layout_below="@+id/inputBase"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:hint="@string/convert"
        android:layout_below="@+id/outputBase"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetButton"
        android:hint="@string/reset"
        android:layout_below="@+id/submitButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textSize="@dimen/answerText"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/resetButton"
        android:layout_alignParentStart="true" />


</RelativeLayout>
